syntax = "proto3";
package kratos.api;

option go_package = "easyCasbin/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Log log = 3;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message JWT {
    string signing_key = 1;
    int64 expires_time = 2;
    int64 buffer_time = 3;
    string issuer = 4;
  }
  HTTP http = 1;
  GRPC grpc = 2;
  JWT  jwt = 3;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
    string db_name = 3;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string password = 3;
    int32 db = 4;
    google.protobuf.Duration dial_timeout = 5;
    google.protobuf.Duration read_timeout = 6;
    google.protobuf.Duration write_timeout = 7;
  }
  Database database = 1;
  Redis redis = 2;
}

message Log {
  string level = 1;
  string prefix = 2;
  string format = 3;
  string director = 4;
  string encode_level = 5;
  string stacktrace_key = 6;
  int32 max_age = 7;
  bool show_line = 8;
  bool log_in_console = 9;
}

message Trace {
  string endpoint = 1;
}

message Registry {
  message Consul {
    string address = 1;
    string scheme = 2;
  }
  Consul consul = 1;
}



